# tauri-plugin-iced

./: Cargo.toml  README.md
openspec/changes/archive/2026-02-02-add-multiple-iced-windows/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-02-add-multiple-iced-windows/specs/multiple-iced-windows/: spec.md
openspec/changes/archive/2026-02-02-add-screenshot-to-test-app/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-02-add-screenshot-to-test-app/specs/multiple-iced-windows/: spec.md
openspec/changes/archive/2026-02-02-add-screenshot-to-test-app/specs/screen-capture/: spec.md
openspec/changes/archive/2026-02-02-tauri-plugin-iced/: tasks.md
openspec/changes/archive/2026-02-02-tauri-plugin-iced/specs/tauri-iced-window/: spec.md
openspec/changes/archive/2026-02-04-migrate-to-tiny-skia/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-04-migrate-to-tiny-skia/specs/tiny-skia-renderer/: spec.md
openspec/changes/archive/2026-02-06-add-mit-license/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-06-add-mit-license/specs/license/: spec.md
openspec/changes/canvas-cursor-overlay/: design.md  proposal.md  tasks.md
openspec/changes/canvas-cursor-overlay/specs/canvas-overlay/: spec.md
openspec/changes/share-wgpu-adapter/: design.md  proposal.md  tasks.md
openspec/changes/share-wgpu-adapter/specs/: spec.md
openspec/changes/tauri-plugin-iced/: design.md  proposal.md  tasks.md
openspec/specs/license/: spec.md
openspec/specs/multiple-iced-windows/: spec.md
openspec/specs/tiny-skia-renderer/: spec.md
refer/: iced  tauri-plugin-egui
