[workspace]
resolver = "2"
members = ["packages/tauri-plugin-iced", "packages/test_app/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[workspace.dependencies]
# Tauri dependencies
tauri = { version = "2.7.0", features = ["unstable"]}
tauri-runtime = "2.7.1"
tauri-runtime-wry = "2.7.2"

# Iced dependencies (workspace with local path references)
iced = { path = "../iced", features = ["wgpu", "canvas", "image"] }
iced_wgpu = { path = "../iced/wgpu", default-features = false }
iced_winit = { path = "../iced/winit", default-features = false }
iced_widget = { path = "../iced/widget" }
iced_runtime = { path = "../iced/runtime" }
iced_graphics = { path = "../iced/graphics" }
iced_core = { path = "../iced/core" }
iced_renderer = { path = "../iced/renderer" }

# Graphics and async
wgpu = { version = "28.0.0", default-features = false, features = ["std", "wgsl"] }
anyhow = "1.0.98"
serde = { version = "1", features = ["derive"] }

# Tauri plugin build
tauri-plugin = { version = "2.3.0", features = ["build"] }

[workspace.metadata.tauri-plugin-iced]
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "Tauri plugin for Iced GUI framework"
